[tool.poetry]
name = "covidashit"
version = "0.1.0"
description = "A simple dashboard to display and monitor the official data of the COVID-19 outbreak in Italy, released by the Italian Civil Protection Dept., and the vaccination-status data, released by Italia Open Data"
authors = ["Fabrizio Miano <fabriziomiano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
cssmin = "0.2.0"
Flask = "2.3.2"
Flask-Assets = "2.1.0"
Flask-Babel = "2.0.0"
Flask-Compress = "1.9.0"
Flask-Limiter = "1.4"
Flask-PyMongo = "2.3.0"
Flask-Sitemap = "0.4.0"
gunicorn = "20.1.0"
jsmin = "3.0.1"
matplotlib = "3.8.2"
pandas = "2.1.4"
python-dotenv = "0.17.1"
requests = "2.31.0"
black = "24.3.0"
flake8 = "6.1.0"
isort = "5.13.2"
pre-commit = "3.6.0"
pyflakes = "3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
